--- a/signup.html
+++ b/signup.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <form>
-        <h2>Fill your information</h2>
-        <input id ="Fn" type="text" placeholder="First Name">
-        <input id ="Ln" type="text" placeholder="Last Name">
-        <input id ="Em" type="email" placeholder="Email (abc@example.com)">
-        <input id ="Bd" type="date">
-        <div>
-            <input id ="Ac" type="checkbox" name="license">
-            <label for="license">I have read and accept the license</label>
+        <h2>Fill Your Information</h2>
+        <input id="Fn" type="text" placeholder="First Name">
+        <input id="Ln" type="text" placeholder="Last Name">
+        <input id="Em" type="email" placeholder="Email (abc@example.com)">
+        <input id="Bd" type="date">
+        <div class="checkbox-container">
+            <input id="Ac" type="checkbox" name="license">
+            <label for="Ac">I have read and accept the license</label>
         </div>
-        <input id ="submit" type="submit" value="Submit">
+        <input id="submit" type="submit" value="Submit">
     </form>
 </body>
 </html>
